# basicscore

./: .gitignore  Readme.md  pyproject.toml
basicscore/: __init__.py
basicscore/cli/: __init__.py
basicscore/cli/html/: __init__.py  base.css  script.js
basicscore/llm/: __init__.py  llama.py
pages/: tinygrad_scores.html
